feat: second day dev

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button class="navigation__btn" data-use="relax">Отдых</button>
       </div>
 
-      <p class="time"><span class="time__minutes">14</span>:<span class="time__seconds">18</span></p>
+      <p class="time"><span class="time__minutes"></span>:<span class="time__seconds"></span></p>
 
 
       <p class="title">Написать Pomodoro</p>
