add change the modes and add pomodoros

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button class="navigation__btn" data-use="relax">Отдых</button>
       </div>
 
-      <p class="time"><span class="time__minutes"></span>:<span class="time__seconds"></span></p>
+      <p class="time"><span class="time__minutes">00</span>:<span class="time__seconds">00</span></p>
 
 
       <p class="title">Написать Pomodoro</p>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="count">
-      <p class="count_num">3</p>
+      <p class="count_num"></p>
       <p class="count_text">Кол-во помодорок</p>
     </div>
   </div>
